[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/game/background.jpg" type="Texture" id=1]
[ext_resource path="res://scenes/player.tscn" type="PackedScene" id=2]
[ext_resource path="res://scripts/game.gd" type="Script" id=3]
[ext_resource path="res://scenes/drone.tscn" type="PackedScene" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 519.5, 36 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 10, 266.5 )

[sub_resource type="Curve2D" id=3]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 0.00587084, 0, 0, 0, 0, 0, 1017.99, 0, 0, 0, 0, 0, 1017.99, 64, 0, 0, 0, 0, 0.00587084, 64, 0, 0, 0, 0, 0.00587084, 0 )
}

[node name="Node2D" type="Node2D"]
script = ExtResource( 3 )
mob_scene = ExtResource( 4 )

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 1024.0
margin_bottom = 600.0
texture = ExtResource( 1 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 511.5, 570 )
shape = SubResource( 1 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( -7, 267.5 )
shape = SubResource( 2 )

[node name="CollisionShape2D3" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 1033, 267.5 )
shape = SubResource( 2 )

[node name="CollisionShape2D4" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 504, -32 )
shape = SubResource( 1 )

[node name="MobPath" type="Path2D" parent="."]
curve = SubResource( 3 )

[node name="MobSpawnLocation" type="PathFollow2D" parent="MobPath"]
position = Vector2( 0.00587084, 0 )

[node name="Player" parent="." instance=ExtResource( 2 )]
position = Vector2( 545, 485 )

[node name="MobSpawnTimer" type="Timer" parent="."]
wait_time = 3.0
autostart = true

[connection signal="timeout" from="MobSpawnTimer" to="." method="_on_MobSpawnTimer_timeout"]
